# dotfiles

./: .gitignore  CMakeLists.txt  README.md
cmake/: CMakeLists.txt  README.md  main.cpp
cmake/include/core/: core.h  math_ops.h
cmake/include/ui/: formatter.h  ui.h
cmake/include/utils/: string_utils.h  utils.h
cmake/src/core/: core.cpp  math_ops.cpp
cmake/src/ui/: formatter.cpp  ui.cpp
cmake/src/utils/: string_utils.cpp  utils.cpp
cmake/tests/: CMakeLists.txt
cmake/tests/core/: test_core.cpp  test_math_ops.cpp
cmake/tests/fixtures/: dataset_fixture.h
cmake/tests/resources/: xor_dataset.csv
cmake/tests/ui/: test_formatter.cpp  test_ui.cpp
cmake/tests/utils/: test_string_utils.cpp  test_utils.cpp
databases/: README.md  playground-mongodb.yml  playground-postgresql.yml  playground-redis.yml
doc/cpp/: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
doc/cpp/.github/workflows/: docs.yml
doc/cpp/docs/example/example/: annotated.md  class_member_functions.md  class_member_variables.md  class_members.md  classdemo_1_1_renderable.md  classdemo_1_1_shape.md  classes.md  dir_d44c64559bbebec7f509842c48db8b23.md  example_8cpp.md  example_8cpp_source.md  files.md  functions.md  hierarchy.md  macros.md  namespace_member_enums.md  namespace_member_functions.md  namespace_member_typedefs.md  namespace_members.md  namespacedemo.md  namespaces.md  structdemo_1_1_point.md
doc/cpp/include/: example.cpp
docs/: cpp-freebsd.md  cpp-linux.md  cpp-macos.md  cpp-windows.md  cpp.md
i3/: README.md  config  i3status.conf  install.sh
llm/: README.md  core-lowlatency.md  core.md  instructions-language-python.md  instructions.md
llm-agents/: README.md  instructions-language-csharp.md  project-instructions.md
samples/cpp/: CMakeLists.txt  main.cpp
samples/cpp/tests/: test_main.cpp
toolchains/: cpp-windows.md
